working on homepage component

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -18,14 +18,12 @@
  * ========================================================================== */
 
 html {
-  color: #222;
+  color: white;
   font-weight: 100;
   font-family: $font-family-base;
-}
-
-body {
   line-height: 10px; 
-  font-size: 10px; 
+  font-size: 10px;
+  background-color: #017BCC; 
 }
 
 /*
