working on home page

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,8 +10,8 @@
 @import '../variables.scss';
 
 .root {
-  background: #333;
   color: #fff;
+  background-color: $bright-orange;
 }
 
 .container {
