--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -8,12 +8,16 @@ $gray-dark:             color(black lightness(+25%));   /* #404040 */
 $gray:                  color(black lightness(+33.5%)); /* #555 */
 $gray-light:            color(black lightness(+46.7%)); /* #777 */
 $gray-lighter:          color(black lightness(+93.5%)); /* #eee */
+$sky-blue:                color(#017BCC); 
+$text-editor:               color(#001D26);
+$bright-orange:         color(#FF5F1B); 
+$light-green:               color(rgba(0,156,128,0.9)); 
 
 /*
  * Typography
  * ========================================================================== */
 
-$font-family-base:      'Segoe UI', 'HelveticaNeue-Light', sans-serif;
+$font-family-base:      'Work Sans', sans-serif;
 
 /*
  * Layout
