--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -52,6 +52,7 @@ line-height: 2.5rem;
 }
 
 .container {  
+  height:600px; 
   display:table;
   position:relative;
   width: 96%;
@@ -59,6 +60,7 @@ line-height: 2.5rem;
   margin: 0 auto 0 auto;
   padding: 10vh 5px 10vh 5px;
   min-height: 100vh;
+  overflow:hidden; 
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
